<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/TV_Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="34sp" />

    <AutoCompleteTextView
        android:id="@+id/ACTV_Start_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_Header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/tv_from_hint" >

        <requestFocus />
    </AutoCompleteTextView>

    <AutoCompleteTextView
        android:id="@+id/ACTV_End_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ACTV_Start_location"
        android:layout_below="@+id/ACTV_Start_location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/tv_to_hint" />

    <ImageButton
        android:id="@+id/IB_Calendar_start"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/ET_Date"
        android:layout_toRightOf="@id/ET_Date"
        android:src="@android:drawable/ic_menu_today" />
    
    <EditText
        android:id="@+id/ET_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ACTV_End_location"
        android:layout_below="@+id/ACTV_End_location"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/pick_date"
        android:inputType="date" />
    
    <Button
        android:id="@+id/Btn_Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ET_Date"
        android:layout_below="@+id/ET_Date"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_corners"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="30dp"
        android:text="@string/search" />



</RelativeLayout>